# sieve-bufferpool

./: .gitignore  CMakeLists.txt  EXPLANATION.md  PROJECT_TRACKER.md  README.md  build.ps1  plot.py
bench/: runner.cpp  traces.cpp  traces.h
include/: buffer_pool.h  disk_manager.h  policy.h
include/policies/: clock.h  fifo.h  lru.h  s3fifo.h  sieve.h
results/: summary.md
src/: buffer_pool.cpp  disk_manager.cpp
tests/: run_tests.cpp
